# parent-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  database.db  database.db-journal  dependency.txt  nohup.out  pyproject.toml  spreadsheet.py  users.txt
.circleci/: config.yml
bot/: __main__.py  admin.py  admins.py  commands.py  conv_handler.py  data.py  database.py  methods.py  questions.py  spreadsheet.py  states.py  user_manager.py
bot/handlers/: admin.py  base.py  games.py  questions.py
bot/utils/: log.py  methods.py  spreadsheet.py  tools.py  wraps.py
src/: admin.py  bot.py  commands.py  database.py  etc.py  methods.py  nohup.out  payment.py  questions.py  spreadsheet.py  states.py  user.py  user_manager.py  variables.py
src/Entities/: User.py  etc.py
src/Logic/: Actions.py  Admin.py  Commands.py  Methods.py  Payment.py  Payment.py.save  Questions.py  database.py  etc.py  spreadsheet.py  variables.py
src/Logic copy/: admin.py  database.py  etc.py
src/commands/: payment.py  qestions.py
src/module/: payment.py  questions.py  user_manager.py
src/php/: qaws.php
